// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analytics SQL builders (DB-free) binds order filters and pagination with stable ordering 1`] = `
{
  "query": "WITH
    raw_orders AS (
      SELECT
        JSON_VALUE(properties, '$.orderId') AS raw_order_id,
        multiIf(
          raw_order_id = '', message_id,
          match(raw_order_id, '^gid://shopify/Order/[0-9]+$'),
            extract(raw_order_id, '([0-9]+)$'),
          raw_order_id
        ) AS order_id,
        user_id,
        coalesce(
          parseDateTime64BestEffortOrNull(JSONExtractString(properties, 'paidAt'), 3, 'UTC'),
          event_time
        ) AS order_time,
        if(
          JSONHas(properties, 'amountCents'),
          toInt64OrZero(JSON_VALUE(properties, '$.amountCents')),
          toInt64(round(toFloat64OrZero(JSON_VALUE(properties, '$.total')) * 100))
        ) AS amount_cents,
        if(
          JSONExtractString(properties, 'kind') != '',
          JSONExtractString(properties, 'kind'),
          multiIf(
            JSON_VALUE(properties, '$.isFirstOrder') = 'true', 'new',
            JSON_VALUE(properties, '$.isFirstOrder') = 'false', 'renewal',
            'unknown'
          )
        ) AS order_kind,
        processing_time
      FROM user_events_v2
      WHERE
        workspace_id = {v0:String}
        AND event_type = 'track'
        AND event = 'order_paid'
        AND user_id != ''
        AND hidden = false
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    deduplicated_orders AS (
      SELECT
        order_id,
        argMax(user_id, processing_time) AS user_id,
        argMax(order_time, processing_time) AS order_time,
        argMax(amount_cents, processing_time) AS amount_cents,
        argMax(order_kind, processing_time) AS order_kind
      FROM raw_orders
      GROUP BY order_id
    ),
    orders AS (
      SELECT *
      FROM deduplicated_orders
      WHERE
        order_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND order_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    touches AS (
      SELECT
        user_id,
        event_time AS touch_time,
        template_id,
        broadcast_id,
        journey_id,
        JSONExtractString(properties, 'nodeId') AS journey_node_id,
        if(origin_message_id = '', message_id, origin_message_id) AS attributed_message_id
      FROM internal_events
      WHERE
        workspace_id = {v0:String}
        AND event IN {v4:Array(String)}
        AND user_id != ''
        AND hidden = false
        AND event_time >= subtractDays(
          parseDateTime64BestEffort({v1:String}, 3, 'UTC'),
          {v3:Int32}
        )
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    attributed_orders AS (
      SELECT
        o.order_id,
        o.user_id,
        o.order_time,
        o.amount_cents,
        o.order_kind,
        if(
          c.touch_time >= subtractDays(o.order_time, {v3:Int32}),
          c.touch_time,
          toDateTime64(0, 3, 'UTC')
        ) AS touch_time,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.template_id, '') AS template_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.broadcast_id, '') AS broadcast_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_id, '') AS journey_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_node_id, '') AS journey_node_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.attributed_message_id, '') AS attributed_message_id
      FROM (SELECT * FROM orders ORDER BY user_id, order_time) AS o
      ASOF LEFT JOIN (
        SELECT user_id, touch_time,
          argMax(t.template_id, t.attributed_message_id) AS template_id,
          argMax(t.broadcast_id, t.attributed_message_id) AS broadcast_id,
          argMax(t.journey_id, t.attributed_message_id) AS journey_id,
          argMax(t.journey_node_id, t.attributed_message_id) AS journey_node_id,
          max(t.attributed_message_id) AS attributed_message_id
        FROM touches AS t GROUP BY user_id, touch_time ORDER BY user_id, touch_time
      ) AS c
        ON o.user_id = c.user_id AND o.order_time >= c.touch_time
    )
      SELECT order_id AS orderId, user_id AS userId, toString(order_time) AS date,
        amount_cents AS amountCents, order_kind AS kind,
        journey_id AS journeyId, broadcast_id AS broadcastId,
        journey_node_id AS nodeId, template_id AS templateId, attributed_message_id AS messageId,
        if(attributed_message_id = '', NULL, dateDiff('second', touch_time, order_time) / 60.0) AS minutesSinceClick
      FROM attributed_orders AS ao WHERE ao.journey_id IN {v5:Array(String)} AND ao.template_id IN {v6:Array(String)}
      ORDER BY order_time DESC, order_id DESC
      LIMIT {v7:UInt32} OFFSET {v8:UInt32}",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
    "v3": 7,
    "v4": [
      "DFEmailClicked",
      "DFSmsClicked",
    ],
    "v5": [
      "flow-'",
    ],
    "v6": [
      "template",
    ],
    "v7": 101,
    "v8": 100,
  },
}
`;

exports[`analytics SQL builders (DB-free) binds the selected attribution window and ignores opens even when the legacy flag is true 1`] = `
{
  "query": "WITH
    raw_orders AS (
      SELECT
        JSON_VALUE(properties, '$.orderId') AS raw_order_id,
        multiIf(
          raw_order_id = '', message_id,
          match(raw_order_id, '^gid://shopify/Order/[0-9]+$'),
            extract(raw_order_id, '([0-9]+)$'),
          raw_order_id
        ) AS order_id,
        user_id,
        coalesce(
          parseDateTime64BestEffortOrNull(JSONExtractString(properties, 'paidAt'), 3, 'UTC'),
          event_time
        ) AS order_time,
        if(
          JSONHas(properties, 'amountCents'),
          toInt64OrZero(JSON_VALUE(properties, '$.amountCents')),
          toInt64(round(toFloat64OrZero(JSON_VALUE(properties, '$.total')) * 100))
        ) AS amount_cents,
        if(
          JSONExtractString(properties, 'kind') != '',
          JSONExtractString(properties, 'kind'),
          multiIf(
            JSON_VALUE(properties, '$.isFirstOrder') = 'true', 'new',
            JSON_VALUE(properties, '$.isFirstOrder') = 'false', 'renewal',
            'unknown'
          )
        ) AS order_kind,
        processing_time
      FROM user_events_v2
      WHERE
        workspace_id = {v0:String}
        AND event_type = 'track'
        AND event = 'order_paid'
        AND user_id != ''
        AND hidden = false
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    deduplicated_orders AS (
      SELECT
        order_id,
        argMax(user_id, processing_time) AS user_id,
        argMax(order_time, processing_time) AS order_time,
        argMax(amount_cents, processing_time) AS amount_cents,
        argMax(order_kind, processing_time) AS order_kind
      FROM raw_orders
      GROUP BY order_id
    ),
    orders AS (
      SELECT *
      FROM deduplicated_orders
      WHERE
        order_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND order_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    touches AS (
      SELECT
        user_id,
        event_time AS touch_time,
        template_id,
        broadcast_id,
        journey_id,
        JSONExtractString(properties, 'nodeId') AS journey_node_id,
        if(origin_message_id = '', message_id, origin_message_id) AS attributed_message_id
      FROM internal_events
      WHERE
        workspace_id = {v0:String}
        AND event IN {v4:Array(String)}
        AND user_id != ''
        AND hidden = false
        AND event_time >= subtractDays(
          parseDateTime64BestEffort({v1:String}, 3, 'UTC'),
          {v3:Int32}
        )
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    attributed_orders AS (
      SELECT
        o.order_id,
        o.user_id,
        o.order_time,
        o.amount_cents,
        o.order_kind,
        if(
          c.touch_time >= subtractDays(o.order_time, {v3:Int32}),
          c.touch_time,
          toDateTime64(0, 3, 'UTC')
        ) AS touch_time,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.template_id, '') AS template_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.broadcast_id, '') AS broadcast_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_id, '') AS journey_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_node_id, '') AS journey_node_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.attributed_message_id, '') AS attributed_message_id
      FROM (SELECT * FROM orders ORDER BY user_id, order_time) AS o
      ASOF LEFT JOIN (
        SELECT user_id, touch_time,
          argMax(t.template_id, t.attributed_message_id) AS template_id,
          argMax(t.broadcast_id, t.attributed_message_id) AS broadcast_id,
          argMax(t.journey_id, t.attributed_message_id) AS journey_id,
          argMax(t.journey_node_id, t.attributed_message_id) AS journey_node_id,
          max(t.attributed_message_id) AS attributed_message_id
        FROM touches AS t GROUP BY user_id, touch_time ORDER BY user_id, touch_time
      ) AS c
        ON o.user_id = c.user_id AND o.order_time >= c.touch_time
    )
      SELECT journey_id AS journeyId, broadcast_id AS broadcastId,
        journey_node_id AS nodeId, template_id AS templateId,
        toString(toDate(order_time, 'UTC')) AS day, order_kind AS kind,
        toUInt8(attributed_message_id != '') AS attributed,
        count() AS orders, sum(amount_cents) AS revenueCents
      FROM attributed_orders
      GROUP BY journeyId, broadcastId, nodeId, templateId, day, kind, attributed",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
    "v3": 7,
    "v4": [
      "DFEmailClicked",
      "DFSmsClicked",
    ],
  },
}
`;

exports[`analytics SQL builders (DB-free) requires a permanent/hard classification for bounce addresses 1`] = `
{
  "query": "SELECT user_id AS userId,
      coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), user_id) AS address,
      event, toString(max(event_time)) AS date
      FROM dittofeed.user_events_v2
      WHERE workspace_id = {v0:String} AND event_type = 'track' AND hidden = false
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
        AND (event IN ('DFEmailMarkedSpam', 'DFEmailComplaint') OR
          (event = 'DFEmailBounced' AND lowerUTF8(coalesce(nullIf(JSONExtractString(properties, 'bounceType'), ''), JSONExtractString(properties, 'bounce', 'bounceType'))) IN ('permanent', 'hard', 'hardbounce')))
      GROUP BY userId, address, event ORDER BY date DESC, userId LIMIT 1000",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots day SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT *, if(JSONExtractString(properties, 'messageId') != '', JSONExtractString(properties, 'messageId'), message_id) AS resolved_id
    FROM dittofeed.user_events_v2
    WHERE workspace_id = {v0:String} AND event_type = 'track' AND hidden = false
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
      AND (event IN ('DFInternalMessageSent', 'DFSubscriptionChange') OR startsWith(event, 'DFEmail') OR startsWith(event, 'DFSms'))
      AND JSONExtractString(properties, 'variant', 'type') NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(JSONExtractString(properties, 'journeyId'), event_time, JSONExtractString(properties, 'journeyId') != '') AS journeyId,
      argMaxIf(JSONExtractString(properties, 'nodeId'), event_time, JSONExtractString(properties, 'nodeId') != '') AS nodeId,
      argMaxIf(JSONExtractString(properties, 'templateId'), event_time, JSONExtractString(properties, 'templateId') != '') AS templateId,
      argMaxIf(JSONExtractString(properties, 'broadcastId'), event_time, JSONExtractString(properties, 'broadcastId') != '') AS broadcastId,
      argMaxIf(coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), ''), event_time,
        JSONExtractString(properties, 'email') != '' OR JSONExtractString(properties, 'variant', 'to') != '') AS address,
      argMaxIf(JSONExtractString(properties, 'variant', 'type'), event_time, JSONExtractString(properties, 'variant', 'type') != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, toString(toDate(e.event_time, 'UTC')) AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND JSONExtractString(properties, 'action') = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id

    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT journeyId, nodeId, templateId, broadcastId, day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY journeyId, nodeId, templateId, broadcastId, day",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots domain SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT *, if(JSONExtractString(properties, 'messageId') != '', JSONExtractString(properties, 'messageId'), message_id) AS resolved_id
    FROM dittofeed.user_events_v2
    WHERE workspace_id = {v0:String} AND event_type = 'track' AND hidden = false
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
      AND (event IN ('DFInternalMessageSent', 'DFSubscriptionChange') OR startsWith(event, 'DFEmail') OR startsWith(event, 'DFSms'))
      AND JSONExtractString(properties, 'variant', 'type') NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(JSONExtractString(properties, 'journeyId'), event_time, JSONExtractString(properties, 'journeyId') != '') AS journeyId,
      argMaxIf(JSONExtractString(properties, 'nodeId'), event_time, JSONExtractString(properties, 'nodeId') != '') AS nodeId,
      argMaxIf(JSONExtractString(properties, 'templateId'), event_time, JSONExtractString(properties, 'templateId') != '') AS templateId,
      argMaxIf(JSONExtractString(properties, 'broadcastId'), event_time, JSONExtractString(properties, 'broadcastId') != '') AS broadcastId,
      argMaxIf(coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), ''), event_time,
        JSONExtractString(properties, 'email') != '' OR JSONExtractString(properties, 'variant', 'to') != '') AS address,
      argMaxIf(JSONExtractString(properties, 'variant', 'type'), event_time, JSONExtractString(properties, 'variant', 'type') != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, '' AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND JSONExtractString(properties, 'action') = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id
    WHERE d.channel NOT IN ('Sms', 'MobilePush', 'Webhook') AND NOT startsWith(e.event, 'DFSms')
    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT domain AS id, '' AS journeyId, '' AS nodeId, '' AS templateId, '' AS broadcastId, '' AS day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY domain",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots message SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT *, if(JSONExtractString(properties, 'messageId') != '', JSONExtractString(properties, 'messageId'), message_id) AS resolved_id
    FROM dittofeed.user_events_v2
    WHERE workspace_id = {v0:String} AND event_type = 'track' AND hidden = false
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
      AND (event IN ('DFInternalMessageSent', 'DFSubscriptionChange') OR startsWith(event, 'DFEmail') OR startsWith(event, 'DFSms'))
      AND JSONExtractString(properties, 'variant', 'type') NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(JSONExtractString(properties, 'journeyId'), event_time, JSONExtractString(properties, 'journeyId') != '') AS journeyId,
      argMaxIf(JSONExtractString(properties, 'nodeId'), event_time, JSONExtractString(properties, 'nodeId') != '') AS nodeId,
      argMaxIf(JSONExtractString(properties, 'templateId'), event_time, JSONExtractString(properties, 'templateId') != '') AS templateId,
      argMaxIf(JSONExtractString(properties, 'broadcastId'), event_time, JSONExtractString(properties, 'broadcastId') != '') AS broadcastId,
      argMaxIf(coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), ''), event_time,
        JSONExtractString(properties, 'email') != '' OR JSONExtractString(properties, 'variant', 'to') != '') AS address,
      argMaxIf(JSONExtractString(properties, 'variant', 'type'), event_time, JSONExtractString(properties, 'variant', 'type') != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, '' AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND JSONExtractString(properties, 'action') = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id

    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT journeyId, nodeId, templateId, broadcastId, day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY journeyId, nodeId, templateId, broadcastId, day",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;
